2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.19


2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-color-button.c
	(hildon_color_button_init): Moved key handling from key release
	event to key press event.

	(hildon_color_button_key_released): Renamed  to   _key_pressed
	(hildon_color_button_key_pressed) : new name from _key_released

	NB#31604


2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c
	(validated_conversion): return the minimum allowed value for the
	entry when the user types an empty text into an entry and moves
	the focus, instead of returning -1. This change implies that the
	minimum allowed value for the entry is set into the entry instead
	of leaving it empty.

	NB#30937


2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-grid.c (hildon_grid_class_init): do not
	use accumulator for "popup-context-menu"

	NB#29888 / M#483


2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-window.c
	(hildon_window_toggle_menu): Changed the hide condition of the
	menu, now we are using GTK_WIDGET_MAPPED instead of
	GTK_WIDGET_VISIBLE, because the menu can be visible but not mapped
	in some situations, like the one described in this bug.

	NB#28836


2006-06-02  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-app.c (hildon_app_key_snooper): Add code
	to control if there is a combobox activated when the menu key is
	pressed and stop the menu drawing, this is a new case that happens
	when the application is avoiding the focus can go to the combobox.

	NB#26383 (bis)


2006-06-02  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c
	(hildon_time_editor_validate): removed the assinment of the
	error_widget, now just the highlight_callback can do it when it
	finished with it. Control that if we are already managing an error
	we don't start working in other.
