@@ -1,3 +1,13 @@
+2006-06-12  Luc Pionchon  <luc.pionchon@nokia.com>
+
+	* hildon-widgets/hildon-banner.c:
+	(force_to_wrap_truncated): Modified size request of the label
+	when it is wider than the maximum allowed, using the pango
+	layout extension instead of the maximum allowed width.
+
+	NB#31256
+
+
 2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>
 
 	* configure.ac: 0.12.19
